--- a/index.html
+++ b/index.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Archa's Flower Shop</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:wght@400;700;800&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <header></header>
-    <main></main>
+    <!-- Header section -->
+    <header>
+        <div class="nav">
+        </div>
+    </header>
+    <main>
+        <section>
+            <div class="banner-container">
+                <div class="banner-description">
+                    <div class="banner-title">
+                        <h1>Let's make <br>beautiful flowers a <br> part of your life.</h1>
+                    </div>
+                    <div class="banner-txt">
+                        <p>It is a long established fact that a reader will be distracted by the readable content of a
+                            page when looking at its layout. The point of using Lorem Ipsum is that it has a
+                            more-or-less normal distribution of letters.</p>
+                    </div>
+                    <button class="btn-main">Shop Now</button>
+                </div>
+                <div>
+                    <img class="banner-img" src="/images/pngwing 10.png" alt="">
+                </div>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
+
 </html>
