feature, service, deal sections are added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </div>
     </header>
     <main>
+        <!-- Banner section -->
         <section>
             <div class="banner-container">
                 <div class="banner-description">
@@ -34,6 +35,71 @@
                 </div>
                 <div>
                     <img class="banner-img" src="/images/pngwing 10.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- Feature section -->
+        <section>
+            <h3 class="feature-title">Our Featured Flowers</h3>
+            <p class="feature-txt">It is a long established fact that a reader will be distracted by the readable <br>
+                content of a page when looking at its layout.</p>
+            <div class="feature-container">
+                <div id="feature1">
+                    <img src="/images/pngwing 6.png" alt="" class="feature-img">
+                    <p class="feature-cap">Pink Flower Tree</p>
+                </div>
+                <div id="feature2">
+                    <img src="/images/pngwing 5.png" alt="" class="feature-img">
+                    <p class="feature-cap">Pink Flower Tree</p>
+                </div>
+                <div id="feature3">
+                    <img src="/images/pngwing 7.png" alt="" class="feature-img">
+                    <p class="feature-cap">Pink Flower Tree</p>
+                </div>
+            </div>
+        </section>
+        <!-- Service section -->
+        <section>
+            <div class="service-container">
+                <div id="service1">
+                    <img class="service-icon" src="/images/group57.png" alt="">
+                    <p class="service-txt">Same Day Delivery. Click & Collect.</p>
+                </div>
+                <div class="service">
+                    <img class="service-icon" src="/images/group58.png" alt="">
+                    <p class="service-txt">Fresh Flowers. Local Growers.</p>
+                </div>
+                <div id="service2">
+                    <img class="service-icon" src="/images/group59.png" alt="">
+                    <p class="service-txt">Fresh Flowers. Local Growers.</p>
+                </div>
+            </div>
+        </section>
+        <!-- Deals section -->
+        <section>
+            <div class="deal-container">
+                <div class="deal-description">
+                    <h3 class="deal-title">Hot Deal ! Sale Up To 25% <span style="color: #E55473;">Off</span></h3>
+                    <p class="deal-txt">It is a long established fact that a reader will be distracted by the readable
+                        <br>
+                        content of a page when looking at its layout.
+                    </p>
+                    <button class="btn-main">Sign Up</button>
+                </div>
+                <img src="/images/pngwing 8.png" alt="" class="deal-img">
+            </div>
+        </section>
+        <!-- nstagram section -->
+        <section>
+            <div class="insta-container">
+                <h3 class="title">Instagram</h3>
+                <p class="txt">It is a long established fact that a reader will be distracted by the readable content of
+                    a page when looking at its layout.</p>
+                <div class="insta-img">
+                    <img src="/images/flower01.png" alt="">
+                    <img src="/images/rectangle 4.png" alt="">
+                    <img src="/images/rectangle 5.png" alt="">
+                    <img src="/images/rectangle 6.png" alt="">
                 </div>
             </div>
         </section>
