instagram section added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <div class="banner-title">
                         <h1>Let's make <br>beautiful flowers a <br> part of your life.</h1>
                     </div>
-                    <div class="banner-txt">
+                    <div class="txt" style="text-align: left;">
                         <p>It is a long established fact that a reader will be distracted by the readable content of a
                             page when looking at its layout. The point of using Lorem Ipsum is that it has a
                             more-or-less normal distribution of letters.</p>
@@ -40,10 +40,11 @@
         </section>
         <!-- Feature section -->
         <section>
-            <h3 class="feature-title">Our Featured Flowers</h3>
-            <p class="feature-txt">It is a long established fact that a reader will be distracted by the readable <br>
-                content of a page when looking at its layout.</p>
             <div class="feature-container">
+                <h3 class="title">Our Featured Flowers</h3>
+            <p class="txt">It is a long established fact that a reader will be distracted by the readable <br>
+                content of a page when looking at its layout.</p>
+            <div class="features">
                 <div id="feature1">
                     <img src="/images/pngwing 6.png" alt="" class="feature-img">
                     <p class="feature-cap">Pink Flower Tree</p>
@@ -57,6 +58,8 @@
                     <p class="feature-cap">Pink Flower Tree</p>
                 </div>
             </div>
+            </div>
+            
         </section>
         <!-- Service section -->
         <section>
@@ -79,8 +82,8 @@
         <section>
             <div class="deal-container">
                 <div class="deal-description">
-                    <h3 class="deal-title">Hot Deal ! Sale Up To 25% <span style="color: #E55473;">Off</span></h3>
-                    <p class="deal-txt">It is a long established fact that a reader will be distracted by the readable
+                    <h3 class="title">Hot Deal ! Sale Up To 25% <span style="color: #E55473;">Off</span></h3>
+                    <p class="txt">It is a long established fact that a reader will be distracted by the readable
                         <br>
                         content of a page when looking at its layout.
                     </p>
@@ -89,17 +92,17 @@
                 <img src="/images/pngwing 8.png" alt="" class="deal-img">
             </div>
         </section>
-        <!-- nstagram section -->
+        <!-- Instagram section -->
         <section>
             <div class="insta-container">
                 <h3 class="title">Instagram</h3>
                 <p class="txt">It is a long established fact that a reader will be distracted by the readable content of
                     a page when looking at its layout.</p>
-                <div class="insta-img">
-                    <img src="/images/flower01.png" alt="">
-                    <img src="/images/rectangle 4.png" alt="">
-                    <img src="/images/rectangle 5.png" alt="">
-                    <img src="/images/rectangle 6.png" alt="">
+                <div class="insta-img-container">
+                    <img class="insta-img" src="/images/flower01.png" alt="">
+                    <img class="insta-img" src="/images/rectangle 4.png" alt="">
+                    <img class="insta-img" src="/images/rectangle 5.png" alt="">
+                    <img class="insta-img" src="/images/rectangle 6.png" alt="">
                 </div>
             </div>
         </section>
