Subscribe section added

--- a/index.html
+++ b/index.html
@@ -42,24 +42,24 @@
         <section>
             <div class="feature-container">
                 <h3 class="title">Our Featured Flowers</h3>
-            <p class="txt">It is a long established fact that a reader will be distracted by the readable <br>
-                content of a page when looking at its layout.</p>
-            <div class="features">
-                <div id="feature1">
-                    <img src="/images/pngwing 6.png" alt="" class="feature-img">
-                    <p class="feature-cap">Pink Flower Tree</p>
-                </div>
-                <div id="feature2">
-                    <img src="/images/pngwing 5.png" alt="" class="feature-img">
-                    <p class="feature-cap">Pink Flower Tree</p>
-                </div>
-                <div id="feature3">
-                    <img src="/images/pngwing 7.png" alt="" class="feature-img">
-                    <p class="feature-cap">Pink Flower Tree</p>
+                <p class="txt">It is a long established fact that a reader will be distracted by the readable <br>
+                    content of a page when looking at its layout.</p>
+                <div class="features">
+                    <div id="feature1">
+                        <img src="/images/pngwing 6.png" alt="" class="feature-img">
+                        <p class="feature-cap">Pink Flower Tree</p>
+                    </div>
+                    <div id="feature2">
+                        <img src="/images/pngwing 5.png" alt="" class="feature-img">
+                        <p class="feature-cap">Pink Flower Tree</p>
+                    </div>
+                    <div id="feature3">
+                        <img src="/images/pngwing 7.png" alt="" class="feature-img">
+                        <p class="feature-cap">Pink Flower Tree</p>
+                    </div>
                 </div>
             </div>
-            </div>
-            
+
         </section>
         <!-- Service section -->
         <section>
@@ -103,6 +103,17 @@
                     <img class="insta-img" src="/images/rectangle 4.png" alt="">
                     <img class="insta-img" src="/images/rectangle 5.png" alt="">
                     <img class="insta-img" src="/images/rectangle 6.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- Subscribe section -->
+        <section>
+            <div class="subscribe-container">
+                <h3 class="title" style="padding-top: 70px;">Get The Latest Deals</h3>
+                <p class="txt" style="font-size: 14px;">$30 coupon for first shopping</p>
+                <div class="subscribe">
+                    <input class="subscribe-txt-field" type="text" placeholder="Enter your email here....">
+                    <button class="btn-main" style="margin-top: 0px;">Subscribe</button>
                 </div>
             </div>
         </section>
