footer section added

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <section>
             <div class="deal-container">
                 <div class="deal-description">
-                    <h3 class="title">Hot Deal ! Sale Up To 25% <span style="color: #E55473;">Off</span></h3>
+                    <h3 class="title">Hot Deal ! Sale Up To 25% <span class="color">Off</span></h3>
                     <p class="txt">It is a long established fact that a reader will be distracted by the readable
                         <br>
                         content of a page when looking at its layout.
@@ -118,7 +118,12 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer class="footer-container">
+        <h3 class="title"><span class="color">Flower</span>Shop</h3>
+        <p class="txt">It is a long established fact that a reader will be distracted by the readable <br>
+        content of a page when looking at its layout.</p>
+        <p class="txt" style="color: #00000066; font-size: small;">@2020-2023, FlowerShop.com. All rights reserved.</p>
+    </footer>
 </body>
 
 </html>
