--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Archa's Flower Shop</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:wght@400;700;800&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -27,9 +26,7 @@
                         <h1>Let's make <br>beautiful flowers a <br> part of your life.</h1>
                     </div>
                     <div class="txt" style="text-align: left;">
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a
-                            page when looking at its layout. The point of using Lorem Ipsum is that it has a
-                            more-or-less normal distribution of letters.</p>
+                        <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout. The point of using Lorem Ipsum is <br>that it has a more-or-less normal distribution of letters.</p>
                     </div>
                     <button class="btn-main">Shop Now</button>
                 </div>
@@ -83,9 +80,7 @@
             <div class="deal-container">
                 <div class="deal-description">
                     <h3 class="title">Hot Deal ! Sale Up To 25% <span class="color">Off</span></h3>
-                    <p class="txt">It is a long established fact that a reader will be distracted by the readable
-                        <br>
-                        content of a page when looking at its layout.
+                    <p class="txt">It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.
                     </p>
                     <button class="btn-main">Sign Up</button>
                 </div>
@@ -96,8 +91,7 @@
         <section>
             <div class="insta-container">
                 <h3 class="title">Instagram</h3>
-                <p class="txt">It is a long established fact that a reader will be distracted by the readable content of
-                    a page when looking at its layout.</p>
+                <p class="txt">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
                 <div class="insta-img-container">
                     <img class="insta-img" src="/images/flower01.png" alt="">
                     <img class="insta-img" src="/images/rectangle 4.png" alt="">
@@ -110,7 +104,7 @@
         <section>
             <div class="subscribe-container">
                 <h3 class="title" style="padding-top: 70px;">Get The Latest Deals</h3>
-                <p class="txt" style="font-size: 14px;">$30 coupon for first shopping</p>
+                <p class="txt" style="font-size: 18px;">$30 coupon for first shopping</p>
                 <div class="subscribe">
                     <input class="subscribe-txt-field" type="text" placeholder="Enter your email here....">
                     <button class="btn-main" style="margin-top: 0px;">Subscribe</button>
@@ -121,7 +115,7 @@
     <footer class="footer-container">
         <h3 class="title"><span class="color">Flower</span>Shop</h3>
         <p class="txt">It is a long established fact that a reader will be distracted by the readable <br>
-        content of a page when looking at its layout.</p>
+            content of a page when looking at its layout.</p>
         <p class="txt" style="color: #00000066; font-size: small;">@2020-2023, FlowerShop.com. All rights reserved.</p>
     </footer>
 </body>
