--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <button class="btn-main">Shop Now</button>
                 </div>
                 <div>
-                    <img class="banner-img" src="/images/pngwing 10.png" alt="">
+                    <img class="banner-img" src="images/pngwing 10.png" alt="">
                 </div>
             </div>
         </section>
