image psth changed

--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
                     content of a page when looking at its layout.</p>
                 <div class="features">
                     <div id="feature1">
-                        <img src="/images/pngwing 6.png" alt="" class="feature-img">
+                        <img src="images/pngwing 6.png" alt="" class="feature-img">
                         <p class="feature-cap">Pink Flower Tree</p>
                     </div>
                     <div id="feature2">
-                        <img src="/images/pngwing 5.png" alt="" class="feature-img">
+                        <img src="images/pngwing 5.png" alt="" class="feature-img">
                         <p class="feature-cap">Pink Flower Tree</p>
                     </div>
                     <div id="feature3">
-                        <img src="/images/pngwing 7.png" alt="" class="feature-img">
+                        <img src="images/pngwing 7.png" alt="" class="feature-img">
                         <p class="feature-cap">Pink Flower Tree</p>
                     </div>
                 </div>
@@ -62,15 +62,15 @@
         <section>
             <div class="service-container">
                 <div id="service1">
-                    <img class="service-icon" src="/images/group57.png" alt="">
+                    <img class="service-icon" src="images/group57.png" alt="">
                     <p class="service-txt">Same Day Delivery. Click & Collect.</p>
                 </div>
                 <div class="service">
-                    <img class="service-icon" src="/images/group58.png" alt="">
+                    <img class="service-icon" src="images/group58.png" alt="">
                     <p class="service-txt">Fresh Flowers. Local Growers.</p>
                 </div>
                 <div id="service2">
-                    <img class="service-icon" src="/images/group59.png" alt="">
+                    <img class="service-icon" src="images/group59.png" alt="">
                     <p class="service-txt">Fresh Flowers. Local Growers.</p>
                 </div>
             </div>
@@ -84,7 +84,7 @@
                     </p>
                     <button class="btn-main">Sign Up</button>
                 </div>
-                <img src="/images/pngwing 8.png" alt="" class="deal-img">
+                <img src="images/pngwing 8.png" alt="" class="deal-img">
             </div>
         </section>
         <!-- Instagram section -->
@@ -93,10 +93,10 @@
                 <h3 class="title">Instagram</h3>
                 <p class="txt">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
                 <div class="insta-img-container">
-                    <img class="insta-img" src="/images/flower01.png" alt="">
-                    <img class="insta-img" src="/images/rectangle 4.png" alt="">
-                    <img class="insta-img" src="/images/rectangle 5.png" alt="">
-                    <img class="insta-img" src="/images/rectangle 6.png" alt="">
+                    <img class="insta-img" src="images/flower01.png" alt="">
+                    <img class="insta-img" src="images/rectangle 4.png" alt="">
+                    <img class="insta-img" src="images/rectangle 5.png" alt="">
+                    <img class="insta-img" src="images/rectangle 6.png" alt="">
                 </div>
             </div>
         </section>
