--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
         <!-- Banner section -->
         <section>
-            <div class="banner-container">
+            <div class="display-style banner-container">
                 <div class="banner-description">
                     <div class="banner-title">
                         <h1>Let's make <br>beautiful flowers a <br> part of your life.</h1>
@@ -41,7 +41,7 @@
                 <h3 class="title">Our Featured Flowers</h3>
                 <p class="txt">It is a long established fact that a reader will be distracted by the readable <br>
                     content of a page when looking at its layout.</p>
-                <div class="features">
+                <div class="display-style features">
                     <div id="feature1">
                         <img src="images/pngwing 6.png" alt="" class="feature-img">
                         <p class="feature-cap">Pink Flower Tree</p>
@@ -56,11 +56,10 @@
                     </div>
                 </div>
             </div>
-
         </section>
         <!-- Service section -->
         <section>
-            <div class="service-container">
+            <div class="display-style service-container">
                 <div id="service1">
                     <img class="service-icon" src="images/group57.png" alt="">
                     <p class="service-txt">Same Day Delivery. Click & Collect.</p>
@@ -77,7 +76,7 @@
         </section>
         <!-- Deals section -->
         <section>
-            <div class="deal-container">
+            <div class="display-style deal-container">
                 <div class="deal-description">
                     <h3 class="title">Hot Deal ! Sale Up To 25% <span class="color">Off</span></h3>
                     <p class="txt">It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.
@@ -92,7 +91,7 @@
             <div class="insta-container">
                 <h3 class="title">Instagram</h3>
                 <p class="txt">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
-                <div class="insta-img-container">
+                <div class="display-style insta-img-container">
                     <img class="insta-img" src="images/flower01.png" alt="">
                     <img class="insta-img" src="images/rectangle 4.png" alt="">
                     <img class="insta-img" src="images/rectangle 5.png" alt="">
@@ -105,7 +104,7 @@
             <div class="subscribe-container">
                 <h3 class="title" style="padding-top: 70px;">Get The Latest Deals</h3>
                 <p class="txt" style="font-size: 18px;">$30 coupon for first shopping</p>
-                <div class="subscribe">
+                <div class="display-style subscribe">
                     <input class="subscribe-txt-field" type="text" placeholder="Enter your email here....">
                     <button class="btn-main" style="margin-top: 0px;">Subscribe</button>
                 </div>
