--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
             </div>
         </section>
     </main>
+    <!-- Footer section -->
     <footer class="footer-container">
         <h3 class="title"><span class="color">Flower</span>Shop</h3>
         <p class="txt">It is a long established fact that a reader will be distracted by the readable <br>
